--- a/index.html
+++ b/index.html
@@ -4,40 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="grid.css">
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="container1 container">
+    <div class="wrapper" id="default">
+        <div class="container1 container item">
             <img src="1.jpg" width="100%" height="100%">
             <div class="title1">DIAMOND RING</div>
         </div>
-        <div class="container2 container">
+        <div class="container2 container item">
             <img src="2.jpg" width="100%" height="100%">
             <div class="title1">DIAMOND EARRING</div>
         </div>
-        <div class="container3 container">
+        <div class="container3 container item">
             <img src="3.jpg" width="100%" height="100%">
             <div class="title1">DIAMOND PENDANT</div>
         </div>
-        <div class="container4 container">
+        <div class="container4 container item">
             <img src="4.jpg" width="100%" height="100%">
             <div class="title1">DIAMOND MENGALSUTRAS</div>
         </div>
-        <div class="container5 container">
+        <div class="container5 container item">
             <img src="5.jpg" width="100%" height="100%">
             <div class="title1"> GOLD BANGLES</div>
         </div>
-        <div class="container6 container">
+        <div class="container6 container item">
             <img src="6.jpg" width="100%" height="100%">
             <div class="title1">GOLD CHAINS</div>
         </div>
-        <div class="container7 container">
+        <div class="container7 container item">
             <img src="7.jpg" width="100%" height="100%">
             <div class="title1">GOLD NECKLACES</div>
         </div>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
+    <script src="carousel.js"></script>
 
 </body>
 
